--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -149,7 +149,7 @@
     }
    ],
    "source": [
-    "df = pd.read_json('Cell_Phones_and_Accessories_5.json', lines = True)         #in json multiple lines h data me isliye lines = True\n",
+    "df = pd.read_json('Cell_Phones_and_Accessories_5.json', lines = True)         
     "df.head()"
    ]
   },
